--- a/stylesheets/new.css
+++ b/stylesheets/new.css
@@ -1,24 +1,52 @@
 .job {
     border: 2px solid #feb800;
-    padding: 30px;
     margin-bottom: 30px;
     min-height: 330px;
 }
 .job__hd {
-    margin-bottom:20px;
-    font-size: 18px;
+    padding: 30px;
+    font-size: 24px;
+    letter-spacing:10px;
     font-weight: bold;
     color: #000;
+    background:#feb800;
+    text-align: center;
+}
+.job__bd {
+    padding: 30px;
 }
 .job-title {
     margin: 0 auto;
-    margin-bottom:30px;
+    margin-bottom: 30px;
     width: 80%;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 1.5;
     color: #263238;
     font-weight: bold;
 }
-.job-desc{
-
+.job__bd h4 {
+    margin-bottom:20px;
+    color: #222;
+    font-size:16px;
+    line-height:1.5;
+    font-weight: bold;
+}
+.job__bd h5 {
+    margin-top: 20px;
+    color: #222;
+    font-size: 14px;
+    line-height:1.5;
+    font-weight: bold;
+}
+.job__bd p {
+    margin:20px 0;
+}
+.btn_orange {
+    color:#feb800;
+    border: 1px solid #feb800;
+}
+.btn_orange:hover {
+    color:#feb800;
+    opacity:.7;
 }
